--- a/app/design/frontend/creo/default/template/extensions/collections/men.phtml
+++ b/app/design/frontend/creo/default/template/extensions/collections/men.phtml
@@ -95,9 +95,7 @@ $currentUrl = Mage::helper('core/url')->getCurrentUrl();
         <li>
 
 
-                <a href="<?php echo Mage::getBaseUrl().'clothing/men/'.slugify($attr->getSource()->getOptionText($a)).'.html';//Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a."" ?>"><?php echo $attr->getSource()->getOptionText($a); ?></a>
-                        
-
+                <a href="<?php echo Mage::getBaseUrl().'clothing/men/'.slugify($attr->getSource()->getOptionText($a)).'.html';//Mage::getBaseUrl() . "clothing/men.html?universal_categories=".$a."" ?>"><?php echo $this->__($attr->getSource()->getOptionText($a)); ?></a>
         </li>
     <?php endforeach ?>
 
