text domain fix

--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -10,7 +10,7 @@ html{direction:rtl}body{direction:rtl}.flip.text-left{text-align:right}.flip.tex
 body{}
 footer#footer{direction:rtl;}
 .col-static{position: static;}
-#header .right-area,#header .bottom-area,#product-options-wrapper{text-align:left;}
+#header .right-area,#header .bottom-area{text-align:left;}
 #header .header-icons{right:inherit;left:112px;}
 #header .cart .slide,.searchautocomplete .searchautocomplete-placeholder,
 .searchautocomplete .searchautocomplete-placeholder:before,
@@ -35,7 +35,7 @@ border-width: 30px 6px 0 0px;left:inherit;right:100%;}
 .shipping-methods h3, #last_most_view_title > h3,.faq-area h3,.tab-content2 .dark-heading,.three-column h3,
 #savePopup .form-horizontal .form-group p,.modal-holder .login-form label,.attributeItem,.jconfirm .jconfirm-box div.title,
 .jconfirm .jconfirm-box div.content,input,select,textarea,input[type="text"], input[type="password"], input.email,.cart-table-area dl dt,
-.cart-table-area dl dd{text-align:right;}
+.cart-table-area dl dd,#product-options-wrapper{text-align:right;}
 .order-details-table th:first-child{text-align:center;}
 .product-detail .price-area .availability,.cart-top-area .btn-holder{float:left;}
 .catalog-product-view .text-area .qty-area label{display:block;}
@@ -56,7 +56,7 @@ white-space:nowrap;}
 #header .cart .opener .count{left:inherit;right:15px;}
 .pdc-design-view .edit-tools{left:0;}
 .layer-final label{float:right !important;white-space:nowrap;}
-#product-options-wrapper{width:84%;}
+#product-options-wrapper{width:84%;float:right;}
 .breadcrumb1 li{float: right;margin: 0 0 0 45px;}
 .icon-angle-left:before{content: '\e810';}
 .icon-angle-right:before{content: '\e80f';}
