--- a/skin/frontend/creo/default/style-ar.css
+++ b/skin/frontend/creo/default/style-ar.css
@@ -21,7 +21,7 @@ left:0;}
 .faq-area.return-area .step-col li,.signup-form .row .col,.form-holder .form-frame,.nav li, form li,.checkoutShippingMethod ul li input,
 .checkoutShippingMethod ul li label,.product-detail .price-area .price,#bill_form label, #ship_form label,.tabset.tabset1 li,
 #nav .links-area .sorting-items,.product-swatches-container .has-swatches li,.cart-top-area h2,.tabset.tabset2 li,.options-area .column,
-.options-area .column li,.cs-form .form-col,.bulk-order-form .form-col{float:right;}
+.options-area .column li,.cs-form .form-col,.bulk-order-form .form-col,.bulk-order-form .form-select-col{float:right;}
 #nav .links-area .sorting-items{margin-left:15px;text-align:right;}
 #footer .column.column1{width:auto;}
 .product-detail .btn-holder button:first-child .span1{margin-left:0;margin-right:10px;}
@@ -61,7 +61,7 @@ white-space:nowrap;}
 .breadcrumb1 li{float: right;margin: 0 0 0 45px;}
 .icon-angle-left:before{content: '\e810';}
 .icon-angle-right:before{content: '\e80f';}
-.design_categories_attributes ul li,.cs-form .form-col,.bulk-order-form .form-col{margin:0 0% 1% 1%;}
+.design_categories_attributes ul li,.cs-form .form-col,.bulk-order-form .form-col,.bulk-order-form .form-select-col{margin:0 0% 1% 1%;}
 .design_categories_attributes ul li:nth-child(4n){margin-left:0;}
 a.sizeguide_link{top:110px;}
 .sales-order-view .cart-table-area th:before, .cart-table-area td:before{left:inherit;right:12px;border-left:0;border-right:2px solid #f3f3f3;}
