--- a/skin/frontend/creo/default/css/styles.css
+++ b/skin/frontend/creo/default/css/styles.css
@@ -352,7 +352,9 @@
   padding: 0;
 }
 /*Messages are shifted to popups using these hidden fields, so do not remove*/
-.input-box .validation-advice {visibility:hidden;}/*Disabled visibility because, the messages are now shown in popups*/
+/*Disabled visibility because, the messages are now shown in popups Sorry but both should need to come
+.input-box .validation-advice {visibility:hidden;}
+
 
 
 /* Print version styles */
