checkout load fix

--- a/app/design/frontend/creo/default/template/checkout/onepage/payment.phtml
+++ b/app/design/frontend/creo/default/template/checkout/onepage/payment.phtml
@@ -33,7 +33,7 @@
 //]]>
 </script>
 <form action="" id="co-payment-form">
-    <div class="fieldset">
+    <div class="fieldset" id="checkout-payment-method-load">
         <?php echo $this->getChildChildHtml('methods_additional', '', true, true) ?>
         <?php echo $this->getChildHtml('methods') ?>
     </div>
